CVNAS: Modification in SCR settings
- security locked, security ownership to NVG1,
  enable read and write on NVG0, NVG1, NVG2, and NVG5
  CBB_CENTRAL_NOC_CV0_BLF_CONTROL_REGISTER_0

Bug 200727033

Change-Id: I50dcf8609681ccf3749ad4cc46d78924d32a5c6e
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/platform/t19x/common/+/2527119
Tested-by: Simon Je <sje@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: Dilan Lee <dilee@nvidia.com>
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Adithya Manjunath <amanjunath@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/bct/scr/tegra194-mb1-bct-scr-cbb-mini-safety.cfg
+++ b/bct/scr/tegra194-mb1-bct-scr-cbb-mini-safety.cfg
@@ -2,7 +2,7 @@
 #
 # t194_cbb.cfg
 #
-# Copyright (c) 2017 - 2020, NVIDIA Corporation. All Rights Reserved.
+# Copyright (c) 2017 - 2021, NVIDIA Corporation. All Rights Reserved.
 #
 # NVIDIA Corporation and its licensors retain all intellectual property
 # and proprietary rights in and to this software and related documentation
@@ -15,7 +15,7 @@ scr.minor = 0;
 
 # Chip version = 91;
 # Platform version = 0;
-# Project version = 8;
+# Project version = 9;
 # SCR Section
 scr.0.6 = 0x3c001010; # APS_AST_SCR_AST_GBL_SEC_CONTROL_0
 scr.1.6 = 0x390003ff; # APS_AST_SCR_AST_HYP_SEC_CONTROL_0
@@ -2264,7 +2264,7 @@ scr.2242.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_AVFS_17_CAR_BLF_CONTROL_REGISTER_0
 scr.2243.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_AVFS_18_CAR_BLF_CONTROL_REGISTER_0
 scr.2244.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_AVFS_21_CAR_BLF_CONTROL_REGISTER_0
 scr.2245.4 = 0x3d0020ff; # CBB_CENTRAL_NOC_CBB_ERR_COLLATOR_0_BLF_CONTROL_REGISTER_0
-scr.2246.4 = 0x1800ffff; # CBB_CENTRAL_NOC_CV0_BLF_CONTROL_REGISTER_0
+scr.2246.4 = 0x39002727; # CBB_CENTRAL_NOC_CV0_BLF_CONTROL_REGISTER_0
 scr.2247.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_CV_SOC_CAR_BLF_CONTROL_REGISTER_0
 scr.2248.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_CVNAS_CAR_BLF_CONTROL_REGISTER_0
 scr.2249.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_DLA0_CAR_BLF_CONTROL_REGISTER_0
