--- a/common/tegra194-audio-p2822-0000.dtsi
+++ b/common/tegra194-audio-p2822-0000.dtsi
@@ -84,12 +84,14 @@
 
 	hda@3510000 {
 		status = "okay";
+
+		nvidia,model = "NVIDIA Jetson AGX Xavier HDA";
 	};
 
 	tegra_sound: sound {
 		status = "okay";
-		compatible = "nvidia,tegra-audio-t186ref-mobile-rt565x";
-		nvidia-audio-card,name = "tegra-snd-t19x-mobile-rt565x";
+		compatible = "nvidia,tegra186-ape";
+		nvidia-audio-card,name = "NVIDIA Jetson AGX Xavier APE";
 		clocks = <&bpmp_clks TEGRA194_CLK_PLLA>,
 			 <&bpmp_clks TEGRA194_CLK_PLLA_OUT0>,
 			 <&bpmp_clks TEGRA194_CLK_AUD_MCLK>;
@@ -248,8 +250,7 @@
 		       <&admaif17_codec_port>, <&admaif18_codec_port>,
 		       <&admaif19_codec_port>, <&admaif20_codec_port>;
 
-		/* TODO: Use a standard card name (bug 200717065) */
-		label = "tegra-snd-t19x-mobile-rt565x";
+		label = "NVIDIA Jetson AGX Xavier APE";
 
 		clocks = <&bpmp_clks TEGRA194_CLK_PLLA>,
 			 <&bpmp_clks TEGRA194_CLK_PLLA_OUT0>;
