--- a/common/tegra194-audio-e3900-0000.dtsi
+++ b/common/tegra194-audio-e3900-0000.dtsi
@@ -54,12 +54,14 @@
 
 	hda@3510000 {
 		status = "okay";
+
+		nvidia,model = "NVIDIA Jetson Clara AGX HDA";
 	};
 
 	tegra_sound: sound {
 		status = "okay";
-		compatible = "nvidia,tegra-audio-t186ref-mobile-rt565x";
-		nvidia-audio-card,name = "tegra-snd-t19x-mobile-rt565x";
+		compatible = "nvidia,tegra186-ape";
+		nvidia-audio-card,name = "NVIDIA Jetson Clara AGX APE";
 		clocks = <&bpmp_clks TEGRA194_CLK_PLLA>,
 			 <&bpmp_clks TEGRA194_CLK_PLLA_OUT0>,
 			 <&bpmp_clks TEGRA194_CLK_AUD_MCLK>;
