t19x: jakku: Generic card and compatible names
Currently generic APE machine driver is used which can work with multiple
audio cards and codecs. Hence there is no need to associate the card name
with specific codec. The same applies to "mobile" prefix as well. Thus use
generic name for APE sound card and update HDA sound card as well to
follow consistent naming style.

Similarly update compatible names as well.

Bug 200717065

Change-Id: I45b65e2a932b7b710a6241a42749ac897681ca5f
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/platform/t19x/jakku-dts/+/2527725
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Jonathan Hunter <jonathanh@nvidia.com>
Reviewed-by: Sameer Pujar <spujar@nvidia.com>
Reviewed-by: Mohan Kumar D <mkumard@nvidia.com>
Reviewed-by: Sharad Gupta <sharadg@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: Sameer Pujar <spujar@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/common/tegra194-audio-p3668.dtsi
+++ b/common/tegra194-audio-p3668.dtsi
@@ -30,14 +30,15 @@
 	};
 
 	hda@3510000 {
-		hda,card-name = "tegra-hda-xnx";
 		status = "okay";
+
+		nvidia,model = "NVIDIA Jetson Xavier NX HDA";
 	};
 
 	tegra_sound: sound {
 		status = "okay";
-		compatible = "nvidia,tegra-audio-t186ref-mobile-rt565x";
-		nvidia-audio-card,name = "jetson-xaviernx-ape";
+		compatible = "nvidia,tegra186-ape";
+		nvidia-audio-card,name = "NVIDIA Jetson Xavier NX APE";
 		clocks = <&bpmp_clks TEGRA194_CLK_PLLA>,
 			 <&bpmp_clks TEGRA194_CLK_PLLA_OUT0>,
 			 <&bpmp_clks TEGRA194_CLK_AUD_MCLK>;
