dts: t23x: add sap address to nvrng node
- Add SE0  SAP register space to nvrng memory resource.
- Remove se_ahb node, as it is obsolete.

Bug 200607687
Bug 3297165

Signed-off-by: Rakesh Babu Bodla <rbodla@nvidia.com>
Change-Id: I0ff03c17a82ae9e4fb62cc9981a9e1aee212db01
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2528323
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra234-soc/tegra234-soc-base.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-base.dtsi
@@ -329,18 +329,11 @@
 	};
 #endif
 
-	se: se_ahb@3ac0000 {
-		compatible = "nvidia,tegra234-se-ahb";
-		reg = <0x0 0x03ac0000 0x0 0x10000>;
-		interrupts = <0 281 0x04>;
-		clocks = <&bpmp_clks TEGRA234_CLK_SE>;
-		clock-names = "se";
-		status = "disabled";
-	};
-
 	nvrng@3ae0000 {
 		compatible = "nvidia,tegra234-se-nvrng";
-		reg = <0x0 0x3ae0000 0x0 0x10000>;
+		reg-names = "rng1", "sap";
+		reg = <0x0 0x3ae0000 0x0 0x10000>,
+		      <0x0 0x3ac0000 0x0 0x10000>;
 		interrupts = <0x0 284 0x4>;
 		clocks = <&bpmp_clks TEGRA234_CLK_SE>;
 		clock-names = "se";
