tegra: nvmap: Enable page pool for kstable
sched_setscheduler is not an exported function hence instead use the
sched_set_normal with max nice value.
As OOT module doesn't support Kconfig, add a ccflag for NVMAP_PAGE_POOLS
Also define CONFIG_NVMAP_PAGE_POOL_SIZE for kstable, we will get rid of
this once we completely mode to ccflags from kconfig.

Bug 200722693
Bug 200722795

Change-Id: I6eed9702fd3719c6507d47325fe653eac3dc1d63
Signed-off-by: ketanp <ketanp@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvidia/+/2527528
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Puneet Saxena <puneets@nvidia.com>
Reviewed-by: Sachin Nikam <snikam@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/drivers/video/tegra/nvmap/Makefile
+++ b/drivers/video/tegra/nvmap/Makefile
@@ -26,7 +26,9 @@ nvmap-y := nvmap_core.o \
 	nvmap_kasan_wrapper.o
 nvmap-$(CONFIG_NVMAP_SCIIPC) += nvmap_sci_ipc.o
 
-obj-$(CONFIG_NVMAP_PAGE_POOLS) += nvmap_pp.o
+ifeq ($(CONFIG_NVMAP_PAGE_POOLS), y)
+nvmap-y += nvmap_pp.o
+endif
 
 ifneq ($(filter y,$(CONFIG_ARCH_TEGRA_19x_SOC) $(CONFIG_ARCH_TEGRA_194_SOC)),)
 nvmap-y += nvmap_init_t19x.o
@@ -38,7 +40,9 @@ KASAN_SANITIZE_nvmap_kasan_wrapper.o := n
 
 ifneq ($(findstring stable,$(NV_BUILD_KERNEL_OPTIONS)),)
 nvmap-y += nvmap_cache_maint.o
+nvmap-y += nvmap_pp.o
 ccflags-y += -DNVMAP_LOADABLE_MODULE
+ccflags-y += -DCONFIG_NVMAP_PAGE_POOLS
 obj-m +=nvmap.o
 else
 obj-y +=nvmap.o
