gpu: nvgpu: gsp NVRISCV load and bootstrap
Changes:
- This change will only init gsp software
  state, nvgpu_gsp_bootstrap need to be called.
- CONFIG_NVGPU_GSP_SCHEDULER flag is created to
  compile out the gsp scheduler code when needed.
- Created GSP engine reset which is needed when
  ACR completed execution and need to load gsp fw.

NVGPU-6783

Signed-off-by: Ramesh Mylavarapu <rmylavarapu@nvidia.com>
Change-Id: I26263ee5bae07de056f676ed0fddc1193b5af82d
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvgpu/+/2530438
Reviewed-by: svc-mobile-coverity <svc-mobile-coverity@nvidia.com>
Reviewed-by: svc-mobile-cert <svc-mobile-cert@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Vijayakumar Subbu <vsubbu@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/arch/nvgpu-common.yaml
+++ b/arch/nvgpu-common.yaml
@@ -301,6 +301,16 @@ sbr:
              include/nvgpu/sbr.h,
              include/nvgpu/gops/sbr.h ]
 
+gsp:
+  safe: no
+  owner: Ramesh M
+  gpu: igpu
+  sources: [ common/gsp/gsp_init.c,
+             common/gsp/gsp_priv.h,
+             common/gsp/gsp_bootstrap.c,
+             common/gsp/gsp_bootstrap.h,
+             include/nvgpu/gsp.h ]
+
 engine_queues:
   owner: Sagar K
   children:
