t23x: eqos: Add EQOS clks/reset
Bug 3286707

Change-Id: I0053de05ec5293ed82390dc957360400b544ede2
Signed-off-by: Bhadram Varka <vbhadram@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2531644
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Narayan Reddy <narayanr@nvidia.com>
Reviewed-by: Rakesh Goyal <rgoyal@nvidia.com>
Reviewed-by: Bitan Biswas <bbiswas@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/kernel-dts/tegra234-soc/tegra234-soc-eqos.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-eqos.dtsi
@@ -48,6 +48,19 @@
 			     <0 187 0x4>, /* vm1 */
 			     <0 188 0x4>, /* vm2 */
 			     <0 189 0x4>; /* vm3 */
+		resets = <&bpmp_resets TEGRA234_RESET_EQOS>;
+		reset-names = "mac_rst";
+		clocks = <&bpmp_clks TEGRA234_CLK_PLLREFE_VCOOUT>,
+			 <&bpmp_clks TEGRA234_CLK_EQOS_AXI>,
+			 <&bpmp_clks TEGRA234_CLK_EQOS_RX>,
+			 <&bpmp_clks TEGRA234_CLK_EQOS_PTP_REF>,
+			 <&bpmp_clks TEGRA234_CLK_EQOS_TX>,
+			 <&bpmp_clks TEGRA234_CLK_AXI_CBB>,
+			 <&bpmp_clks TEGRA234_CLK_EQOS_RX_M>,
+			 <&bpmp_clks TEGRA234_CLK_EQOS_RX_INPUT>;
+		clock-names = "pllrefe_vcoout", "eqos_axi", "eqos_rx",
+			      "eqos_ptp_ref", "eqos_tx", "axi_cbb",
+			      "eqos_rx_m", "eqos_rx_input";
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		iommus = <&smmu_niso1 TEGRA_SID_NISO1_EQOS>;
 #else
