Revert "arm64: fix zImage dependency"
zImage has never been a supported build target for ARM64
and given that we no longer support 32-bit ARM on dev-main
for branch such as k5.10, So removing support for zImage.

This reverts commit 475e6650ad190322e303072cd2c795b2f25240a9.

Bug 3016397

Change-Id: Ibcde72e340616eb3ecc2b05d7a2fb5868d29c190
Signed-off-by: Manish Bhardwaj <mbhardwaj@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-5.10/+/2531748
Reviewed-by: Bitan Biswas <bbiswas@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -154,10 +154,7 @@ KBUILD_IMAGE	:= $(boot)/Image.gz
 
 all:	Image.gz zImage
 
-Image : vmlinux
-	$(Q)$(MAKE) $(build)=$(boot) $(boot)/$@
-
-zImage: Image
+Image zImage: vmlinux
 	$(Q)$(MAKE) $(build)=$(boot) $(boot)/$@
 
 Image.%: Image
