Revert "arm64: boot: use zImage as kernel build target"
zImage has never been a supported build target for ARM64
and given that we no longer support 32-bit ARM on dev-main
for branch such as k5.10, So removing support for zImage.

This reverts commit 3ad017013ca0b93de51948f8ad7606b3251b9ebc.

Bug 3016397

Change-Id: Ib4b2127d08131628c6b9d34ad53588ac1f6e516d
Signed-off-by: Manish Bhardwaj <mbhardwaj@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-5.10/+/2531750
Reviewed-by: Bitan Biswas <bbiswas@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -152,9 +152,10 @@ libs-$(CONFIG_EFI_STUB) += $(objtree)/drivers/firmware/efi/libstub/lib.a
 boot		:= arch/arm64/boot
 KBUILD_IMAGE	:= $(boot)/Image.gz
 
-all:	Image.gz zImage
+all:	Image.gz
 
-Image zImage: vmlinux
+
+Image: vmlinux
 	$(Q)$(MAKE) $(build)=$(boot) $(boot)/$@
 
 Image.%: Image
