--- a/kernel-dts/tegra234-soc/tegra234-soc-eqos.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-eqos.dtsi
@@ -24,18 +24,22 @@
 		vm_irq1 {
 			nvidia,num-vm-channels = <2>;
 			nvidia,vm-channels = <0 1>;
+			nvidia,vm-num = <0>;
 		};
 		vm_irq2 {
 			nvidia,num-vm-channels = <2>;
 			nvidia,vm-channels = <2 3>;
+			nvidia,vm-num = <1>;
 		};
 		vm_irq3 {
 			nvidia,num-vm-channels = <2>;
 			nvidia,vm-channels = <4 5>;
+			nvidia,vm-num = <2>;
 		};
 		vm_irq4 {
 			nvidia,num-vm-channels = <2>;
 			nvidia,vm-channels = <6 7>;
+			nvidia,vm-num = <3>;
 		};
 	};
 
@@ -83,9 +87,18 @@
 		/* Residual Queue can be any valid queue except RxQ0 */
 		nvidia,residual-queue = <1>;
 		nvidia,rx-queue-prio = <0x2 0x1 0x30 0x48 0x0 0x0 0x0 0x0>;
+		nvidia,tx-queue-prio = <0x0 0x7 0x2 0x3 0x0 0x0 0x0 0x0>;
 		nvidia,rxq_enable_ctrl = <2 2 2 2 2 2 2 2>;
 		nvidia,vm-irq-config = <&eqos_vm_irq_config>;
 		status = "disabled";
 		nvidia,dcs-enable = <0x1>;
+		nvidia,rx_riwt = <512>;
+		nvidia,rx_frames = <64>;
+		nvidia,tx_usecs = <256>;
+		nvidia,tx_frames = <5>;
+		nvidia,promisc_mode = <1>;
+		nvidia,slot_num_check = <0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0>;
+		nvidia,slot_intvl_vals = <0x0 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D>;
+		nvidia,ptp_ref_clock_speed = <208300000>;
 	};
 };
