--- a/kernel-dts/tegra234-soc/tegra234-soc-mgbe.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-mgbe.dtsi
@@ -24,22 +24,27 @@
 		vm_irq1 {
 			nvidia,num-vm-channels = <2>;
 			nvidia,vm-channels = <0 1>;
+			nvidia,vm-num = <0>;
 		};
 		vm_irq2 {
 			nvidia,num-vm-channels = <2>;
 			nvidia,vm-channels = <2 3>;
+			nvidia,vm-num = <1>;
 		};
 		vm_irq3 {
 			nvidia,num-vm-channels = <2>;
 			nvidia,vm-channels = <4 5>;
+			nvidia,vm-num = <2>;
 		};
 		vm_irq4 {
 			nvidia,num-vm-channels = <2>;
 			nvidia,vm-channels = <6 7>;
+			nvidia,vm-num = <3>;
 		};
 		vm_irq5 {
 			nvidia,num-vm-channels = <2>;
 			nvidia,vm-channels = <8 9>;
+			nvidia,vm-num = <4>;
 		};
 	};
 
@@ -94,8 +99,17 @@
 		nvidia,rxq_enable_ctrl = <2 2 2 2 2 2 2 2 2 2>;
 		nvidia,vm-irq-config = <&mgbe_vm_irq_config>;
 		nvidia,tx-queue-prio = <0 1 2 3 4 5 6 7 0 0>;
+		nvidia,rx-queue-prio = <0x1 0x2 0x4 0x8 0x10 0x20 0x40 0x80 0x0 0x0>;
 		status = "disabled";
 		nvidia,dcs-enable = <0x1>;
+		nvidia,rx_riwt = <512>;
+		nvidia,rx_frames = <64>;
+		nvidia,tx_usecs = <256>;
+		nvidia,tx_frames = <5>;
+		nvidia,promisc_mode = <1>;
+		nvidia,slot_num_check = <0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0>;
+		nvidia,slot_intvl_vals = <0x0 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D>;
+		nvidia,ptp_ref_clock_speed = <312500000>;
 	};
 
 	ethernet@6910000 {
@@ -149,7 +163,17 @@
 		nvidia,rxq_enable_ctrl = <2 2 2 2 2 2 2 2 2 2>;
 		nvidia,vm-irq-config = <&mgbe_vm_irq_config>;
 		nvidia,tx-queue-prio = <0 1 2 3 4 5 6 7 0 0>;
+		nvidia,rx-queue-prio = <0x1 0x2 0x4 0x8 0x10 0x20 0x40 0x80 0x0 0x0>;
 		status = "disabled";
+		nvidia,dcs-enable = <0x1>;
+		nvidia,rx_riwt = <512>;
+		nvidia,rx_frames = <64>;
+		nvidia,tx_usecs = <256>;
+		nvidia,tx_frames = <5>;
+		nvidia,promisc_mode = <1>;
+		nvidia,slot_num_check = <0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0>;
+		nvidia,slot_intvl_vals = <0x0 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D>;
+		nvidia,ptp_ref_clock_speed = <312500000>;
 	};
 
 	ethernet@6A10000 {
@@ -203,7 +227,17 @@
 		nvidia,rxq_enable_ctrl = <2 2 2 2 2 2 2 2 2 2>;
 		nvidia,vm-irq-config = <&mgbe_vm_irq_config>;
 		nvidia,tx-queue-prio = <0 1 2 3 4 5 6 7 0 0>;
+		nvidia,rx-queue-prio = <0x1 0x2 0x4 0x8 0x10 0x20 0x40 0x80 0x0 0x0>;
 		status = "disabled";
+		nvidia,dcs-enable = <0x1>;
+		nvidia,rx_riwt = <512>;
+		nvidia,rx_frames = <64>;
+		nvidia,tx_usecs = <256>;
+		nvidia,tx_frames = <5>;
+		nvidia,promisc_mode = <1>;
+		nvidia,slot_num_check = <0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0>;
+		nvidia,slot_intvl_vals = <0x0 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D>;
+		nvidia,ptp_ref_clock_speed = <312500000>;
 	};
 
 	ethernet@6B10000 {
@@ -257,6 +291,16 @@
 		nvidia,rxq_enable_ctrl = <2 2 2 2 2 2 2 2 2 2>;
 		nvidia,vm-irq-config = <&mgbe_vm_irq_config>;
 		nvidia,tx-queue-prio = <0 1 2 3 4 5 6 7 0 0>;
+		nvidia,rx-queue-prio = <0x1 0x2 0x4 0x8 0x10 0x20 0x40 0x80 0x0 0x0>;
 		status = "disabled";
+		nvidia,dcs-enable = <0x1>;
+		nvidia,rx_riwt = <512>;
+		nvidia,rx_frames = <64>;
+		nvidia,tx_usecs = <256>;
+		nvidia,tx_frames = <5>;
+		nvidia,promisc_mode = <1>;
+		nvidia,slot_num_check = <0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0>;
+		nvidia,slot_intvl_vals = <0x0 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D>;
+		nvidia,ptp_ref_clock_speed = <312500000>;
 	};
 };
