gpu: nvgpu: compile out GFxP support in safety
GFxP preemption for graphics contexts is not supported in safety.
But the support was enabled along with CONFIG_NVGPU_GRAPHICS since GFxP
preemption was protected under same config.

Add a separate config CONFIG_NVGPU_GFXP to protect all GFxP specific
code, enum values, and HALs.

Disable the config in safety profile.

Jira NVGPU-6893

Change-Id: Iebb5f754a1025dfa6e05a94704bdb8a7123b599a
Signed-off-by: Deepak Nibade <dnibade@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvgpu/+/2534986
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/drivers/gpu/nvgpu/Makefile
+++ b/drivers/gpu/nvgpu/Makefile
@@ -52,8 +52,9 @@ ccflags-y += -DCONFIG_NVGPU_USERD
 ccflags-y += -DCONFIG_NVGPU_CHANNEL_WDT
 ccflags-y += -DCONFIG_NVGPU_LS_PMU
 ccflags-y += -DCONFIG_NVGPU_CILP
-ccflags-y += -DCONFIG_NVGPU_REPLAYABLE_FAULT
+ccflags-y += -DCONFIG_NVGPU_GFXP
 ccflags-y += -DCONFIG_NVGPU_GRAPHICS
+ccflags-y += -DCONFIG_NVGPU_REPLAYABLE_FAULT
 ccflags-y += -DCONFIG_NVGPU_CHANNEL_TSG_SCHEDULING
 ccflags-y += -DCONFIG_NVGPU_CHANNEL_TSG_CONTROL
 ccflags-y += -DCONFIG_NVGPU_POWER_PG
