bct: scr: update scr for I2C for safety
Allow access to I2C to CCPLEX only and set SEC_LCK

Bug 3309016

Change-Id: Ie00a83914500019dc36f57d6d110c722cb69c03a
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/platform/t19x/common/+/2534598
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Dilan Lee <dilee@nvidia.com>
Reviewed-by: Nagesh G S <ngs@nvidia.com>
Reviewed-by: Amlan Kundu <akundu@nvidia.com>
Reviewed-by: Sumeet Gupta <sumeetg@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: Woojung Min <wmin@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/bct/scr/tegra194-mb1-bct-scr-cbb-mini-safety.cfg
+++ b/bct/scr/tegra194-mb1-bct-scr-cbb-mini-safety.cfg
@@ -15,7 +15,7 @@ scr.minor = 0;
 
 # Chip version = 91;
 # Platform version = 0;
-# Project version = 9;
+# Project version = 10;
 # SCR Section
 scr.0.6 = 0x3c001010; # APS_AST_SCR_AST_GBL_SEC_CONTROL_0
 scr.1.6 = 0x390003ff; # APS_AST_SCR_AST_HYP_SEC_CONTROL_0
@@ -2084,7 +2084,7 @@ scr.2062.4 = 0x3a0024ff; # CBB_CENTRAL_NOC_ERR_COLLATOR_37_CAR_BLF_CONTROL_REGIS
 scr.2063.4 = 0x3a0024ff; # CBB_CENTRAL_NOC_ERR_COLLATOR_4_CAR_BLF_CONTROL_REGISTER_0
 scr.2064.4 = 0x3a0024ff; # CBB_CENTRAL_NOC_ERR_COLLATOR_8_CAR_BLF_CONTROL_REGISTER_0
 scr.2065.4 = 0x38009292; # CBB_CENTRAL_NOC_ETHER_QOS_BLF_CONTROL_REGISTER_0
-scr.2066.4 = 0x1800ffff; # CBB_CENTRAL_NOC_I2C1_BLF_CONTROL_REGISTER_0
+scr.2066.4 = 0x38000202; # CBB_CENTRAL_NOC_I2C1_BLF_CONTROL_REGISTER_0
 scr.2067.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_I2C1_CAR_BLF_CONTROL_REGISTER_0
 scr.2068.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_ISP_CAR_BLF_CONTROL_REGISTER_0
 scr.2069.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_NVDEC1_CAR_BLF_CONTROL_REGISTER_0
@@ -2176,17 +2176,17 @@ scr.2154.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_HDA_CAR_BLF_CONTROL_REGISTER_0
 scr.2155.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_I2C12_CAR_BLF_CONTROL_REGISTER_0
 scr.2156.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_I2C13_CAR_BLF_CONTROL_REGISTER_0
 scr.2157.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_I2C14_CAR_BLF_CONTROL_REGISTER_0
-scr.2158.4 = 0x1800ffff; # CBB_CENTRAL_NOC_I2C3_BLF_CONTROL_REGISTER_0
+scr.2158.4 = 0x38000202; # CBB_CENTRAL_NOC_I2C3_BLF_CONTROL_REGISTER_0
 scr.2159.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_I2C3_CAR_BLF_CONTROL_REGISTER_0
-scr.2160.4 = 0x1800ffff; # CBB_CENTRAL_NOC_I2C4_BLF_CONTROL_REGISTER_0
+scr.2160.4 = 0x38000202; # CBB_CENTRAL_NOC_I2C4_BLF_CONTROL_REGISTER_0
 scr.2161.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_I2C4_CAR_BLF_CONTROL_REGISTER_0
 scr.2162.4 = 0x3a000404; # CBB_CENTRAL_NOC_I2C5_BLF_CONTROL_REGISTER_0
 scr.2163.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_I2C5_CAR_BLF_CONTROL_REGISTER_0
-scr.2164.4 = 0x1800ffff; # CBB_CENTRAL_NOC_I2C6_BLF_CONTROL_REGISTER_0
+scr.2164.4 = 0x38000202; # CBB_CENTRAL_NOC_I2C6_BLF_CONTROL_REGISTER_0
 scr.2165.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_I2C6_CAR_BLF_CONTROL_REGISTER_0
-scr.2166.4 = 0x1800ffff; # CBB_CENTRAL_NOC_I2C7_BLF_CONTROL_REGISTER_0
+scr.2166.4 = 0x38000202; # CBB_CENTRAL_NOC_I2C7_BLF_CONTROL_REGISTER_0
 scr.2167.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_I2C7_CAR_BLF_CONTROL_REGISTER_0
-scr.2168.4 = 0x1800ffff; # CBB_CENTRAL_NOC_I2C9_BLF_CONTROL_REGISTER_0
+scr.2168.4 = 0x38000202; # CBB_CENTRAL_NOC_I2C9_BLF_CONTROL_REGISTER_0
 scr.2169.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_I2C9_CAR_BLF_CONTROL_REGISTER_0
 scr.2170.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_MAUD_CAR_BLF_CONTROL_REGISTER_0
 scr.2171.4 = 0x3f008080; # CBB_CENTRAL_NOC_MIPI_CAL_BLF_CONTROL_REGISTER_0
