gpu: nvgpu: Move intr data members from MC to CIC
Move interrupt specific data-members from common.mc to common.cic
Some of these data members like sw_irq_stall_last_handled_cond need
To be initialized much earlier during the OS specific init/probe stage.
Also, some more members from struct nvgpu_interrupts(like stall_size,
stall_lines[]), which will soon be moved to CIC will also need to be
initialized early during the OS specific probe stage.
However, the chip specific LUT can only be initialized after the
hal_init stage where the HALs are all initialized.
Split the CIC init to accommodate the above initialization requirements.

JIRA NVGPU-6899

Change-Id: I9333db4cde59bb0aa8f6eb9f8472f00369817a5d
Signed-off-by: Tejal Kudav <tkudav@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvgpu/+/2552535
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/arch/nvgpu-common.yaml
+++ b/arch/nvgpu-common.yaml
@@ -1102,6 +1102,8 @@ cic:
              include/nvgpu/gops/cic_mon.h,
              include/nvgpu/cic_mon.h,
              common/cic/rm/rm_intr.c,
+             common/cic/rm/rm_init.c,
+             common/cic/rm/cic_rm_priv.h,
              include/nvgpu/cic_rm.h ]
 
 ##
