gpu: nvgpu: vgpu: add b0cc profiler support
- added new commands to bind/unbind hwpm/hwpm_streamout/smpc
- added new command to updat get/put for PMA buffer
- tune function nvgpu_perfbuf_update_get_put so it could be reused on
server side.
- enable profiler v2 device for gv11b

Jira GVSCI-10351

Signed-off-by: Richard Zhao <rizhao@nvidia.com>
Change-Id: I4226c89ec3040e53dee5381ac8a30c9fd598e5ef
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvgpu/+/2537683
Reviewed-by: svc-mobile-coverity <svc-mobile-coverity@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Deepak Nibade <dnibade@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/arch/nvgpu-vgpu.yaml
+++ b/arch/nvgpu-vgpu.yaml
@@ -1,4 +1,4 @@
-# Copyright (c) 2019, NVIDIA CORPORATION.  All Rights Reserved.
+# Copyright (c) 2019-2021, NVIDIA CORPORATION.  All Rights Reserved.
 #
 # vGPU architecture: currently there hasn't been much work done on
 # decomposing the vGPU architecture so all of the vGPU files are simply
@@ -67,6 +67,8 @@ all:
              common/vgpu/ptimer/ptimer_vgpu.h,
              common/vgpu/init/init_vgpu.c,
              common/vgpu/init/init_vgpu.h,
+             common/vgpu/profiler/profiler_vgpu.c,
+             common/vgpu/profiler/profiler_vgpu.h,
              include/nvgpu/vgpu/tegra_vgpu.h,
              include/nvgpu/vgpu/vgpu.h,
              include/nvgpu/vgpu/vgpu_ivc.h,
