--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -1,5 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0
 
+DTC_CPP_FLAGS += $(EXTRA_CPP_FLAGS)
+
 DTC_CPP_FLAGS += -DLINUX_VERSION=504 -DTEGRA_HOST1X_DT_VERSION=1
 
 DTC_INCLUDE += $(tegra-dtstree)/soc/tegra/kernel-include
