soc: t234: fix clock IDs
* some clock IDs were renamed in bpmp_fw ABI headers - update for these
* some clocks does not exist in t234 - use OSC in their place for now

BPMP-7463

Change-Id: I49c13720f80b08666ec2558b50eeac7d013af560
Signed-off-by: Sivaram Nair <sivaramn@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2519084
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra234-soc/tegra234-soc-audio.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-audio.dtsi
@@ -597,7 +597,7 @@
 				compatible = "nvidia,tegra210-iqc";
 				reg = <0x0 0x290e000 0x0 0x200>;
 				nvidia,ahub-iqc-id = <0>;
-				clocks = <&bpmp_clks TEGRA234_CLK_IQC1>;
+				clocks = <&bpmp_clks TEGRA234_CLK_OSC>;
 				clock-names = "iqc";
 				#sound-dai-cells = <1>;
 				status = "disabled";
