t23x: platform: concord: add ethernet entries
This change takes care of populating the Concord
specific platform entries. These entries includes
PHY interrupts, PHY delays, PHY mode
for 10G.

Bug 200733771

Change-Id: Ie1207fc51327a105afd2756712b19df8d330ab99
Signed-off-by: Narayan Reddy <narayanr@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/platform/t23x/concord-dts/+/2537024
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Bhadram Varka <vbhadram@nvidia.com>
Reviewed-by: Sachin Nikam <snikam@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/cvb/tegra234-p3737-0000-a00.dtsi
+++ b/cvb/tegra234-p3737-0000-a00.dtsi
@@ -15,6 +15,7 @@
 #include "tegra234-pwm-fan.dtsi"
 #include "tegra234-p3737-audio.dtsi"
 #include "tegra234-p3737-fixed-regulator.dtsi"
+#include "tegra234-ethernet-3737-0000.dtsi"
 
 / {
 	gpio-keys {
