soc:t19x:Add PLLA & PLLA_OUT0 clocks in ahub node
After bootup the PLLA and PLLA_OUT0 clocks were improper, until
user runs some usecase.
To get proper clocks, assigned clock rates to PLLA & PLLA_OUT0
in ahub node.
Also I2S clock rate is invalid even after running the usecase,
it was due to PLLA and PLLA_OUT0 rates were not set properly
during i2s probe.

Bug 200683609

Change-Id: If76304f0fdd90e0f5dbffa4d77622f43f6931464
Signed-off-by: Sheetal <sheetal@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t19x/+/2537344
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Viswanath L <viswanathl@nvidia.com>
Reviewed-by: Sameer Pujar <spujar@nvidia.com>
Reviewed-by: Sharad Gupta <sharadg@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra194-soc/tegra194-soc-audio.dtsi
+++ b/kernel-dts/tegra194-soc/tegra194-soc-audio.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017-2020, NVIDIA CORPORATION.  All rights reserved.
+ * Copyright (c) 2017-2021, NVIDIA CORPORATION.  All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify it
  * under the terms and conditions of the GNU General Public License,
@@ -187,10 +187,16 @@
 				 <&bpmp_clks TEGRA194_CLK_APB2APE>,
 				 <&bpmp_clks TEGRA194_CLK_APE>;
 			clock-names = "ahub", "parent", "apb2ape", "xbar.ape";
-			assigned-clocks = <&bpmp_clks TEGRA194_CLK_AHUB>;
+			assigned-clocks = <&bpmp_clks TEGRA194_CLK_PLLA>,
+					<&bpmp_clks TEGRA194_CLK_PLLA_OUT0>,
+					<&bpmp_clks TEGRA194_CLK_AHUB>;
 			assigned-clock-parents =
+				<0>,
+				<&bpmp_clks TEGRA194_CLK_PLLA>,
 				<&bpmp_clks TEGRA194_CLK_PLLP_OUT0>;
-			assigned-clock-rates = <81600000>;
+			assigned-clock-rates = <294912000>,
+						<49152000>,
+						<81600000>;
 			status = "disabled";
 
 			#address-cells = <2>;
