t19x: jakku: add pmc invert irq property for K5.10
Upstream PMC driver has property "nvidia, invert-interrupt" which needs to
be added for PMC controller address 0xc360000(PMC_IMPL) for correct IRQ
settings. This solves spurious interrupts raised by PMIC.
TEGRA_PMC_VERSION is 2 for >=K4.14

Bug 3312484

Change-Id: Ic07b680b6245484e00c00e1312f48491ad5f76ff
Signed-off-by: Shubhi Garg <shgarg@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/platform/t19x/jakku-dts/+/2537446
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Bibek Basu <bbasu@nvidia.com>
Reviewed-by: Petlozu Pravareshwar <petlozup@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/common/tegra194-p3668-common.dtsi
+++ b/common/tegra194-p3668-common.dtsi
@@ -55,18 +55,24 @@
 			    <1267200 408000>;
 	};
 #endif
+
+#if TEGRA_PMC_VERSION >= DT_VERSION_2
+        pmc@c360000 {
+		nvidia,invert-interrupt;
+	};
+#else
 	pmc@c370000 {
 		nvidia,invert-interrupt;
 	};
-
-        pmc@c360000 {
-                 iopad_defaults: iopad-defaults {
-                         sdmmc-io-pads {
-                                 pins = "sdmmc1-hv", "sdmmc3-hv";
-                                 nvidia,enable-voltage-switching;
-                         };
-                 };
-         };
+#endif
+	pmc@c360000 {
+		iopad_defaults: iopad-defaults {
+			sdmmc-io-pads {
+				pins = "sdmmc1-hv", "sdmmc3-hv";
+				nvidia,enable-voltage-switching;
+			};
+		};
+	};
 
 	hdr40_i2c0: i2c@c240000 {
 		/* This I2C (GEN2) is routed only to 40-pin hdr
