soc:t23x:Add PLLA & PLLA_OUT0 clocks in ahub node
After bootup the PLLA and PLLA_OUT0 clocks were improper, until
user runs some usecase.
To get proper clocks, assigned clock rates to PLLA & PLLA_OUT0
in ahub node.
Also I2S clock rate is invalid even after running the usecase,
it was due to PLLA and PLLA_OUT0 rates were not set properly
during i2s probe.

Bug 200683609

Change-Id: I74e508837b536498f090da43e986337ae7e47828
Signed-off-by: Sheetal <sheetal@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2537770
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Viswanath L <viswanathl@nvidia.com>
Reviewed-by: Sameer Pujar <spujar@nvidia.com>
Reviewed-by: Sharad Gupta <sharadg@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra234-soc/tegra234-soc-audio.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-audio.dtsi
@@ -179,10 +179,16 @@
 				<&bpmp_clks TEGRA234_CLK_APB2APE>,
 				<&bpmp_clks TEGRA234_CLK_APE>;
 			clock-names = "ahub", "parent", "apb2ape", "xbar.ape";
-			assigned-clocks = <&bpmp_clks TEGRA234_CLK_AHUB>;
+			assigned-clocks = <&bpmp_clks TEGRA234_CLK_PLLA>,
+					<&bpmp_clks TEGRA234_CLK_PLLA_OUT0>,
+					<&bpmp_clks TEGRA234_CLK_AHUB>;
 			assigned-parent-clocks =
+				<0>,
+				<&bpmp_clks TEGRA234_CLK_PLLA>,
 				<&bpmp_clks TEGRA234_CLK_PLLP_OUT0>;
-			assigned-clock-rates = <81600000>;
+			assigned-clock-rates = <294912000>,
+						<49152000>,
+						<81600000>;
 			status = "disabled";
 
 			#address-cells = <2>;
