pva: implement app registration ioctls
Implementation is mostly copied from PVA V2 QNX driver with the
following changes:

1. Use dma API instead of NvRM to map memory for APP sections
2. Use nvhost driver to manage buffers
3. Use kernel memory service to allocate dynamic memory

Jira PVA-2174

Change-Id: I0cf84d5b67f1e549427ff5ff7380da138a06dc43
Signed-off-by: Nan Wang <nanwa@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvidia/+/2537281
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: Omar Nemri <onemri@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/drivers/video/tegra/host/pva/Makefile
+++ b/drivers/video/tegra/host/pva/Makefile
@@ -27,7 +27,10 @@ nvhost-pva-objs  = \
 		pva_trace.o \
 		pva_abort.o \
 		pva_ccq_t19x.o \
-		pva_selftest.o
+		pva_selftest.o \
+		nvpva_elf_parser.o \
+		pva_vpu_exe.o \
+		nvpva_client.o
 
 obj-$(V2) += nvhost-pva.o
 
