--- a/common/tegra194-audio-p2822-0000.dtsi
+++ b/common/tegra194-audio-p2822-0000.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017-2020, NVIDIA CORPORATION.  All rights reserved.
+ * Copyright (c) 2017-2021, NVIDIA CORPORATION.  All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify it
  * under the terms and conditions of the GNU General Public License,
@@ -80,10 +80,8 @@
 			 <&bpmp_clks TEGRA194_CLK_PLLA_OUT0>,
 			 <&bpmp_clks TEGRA194_CLK_AUD_MCLK>;
 		clock-names = "pll_a", "pll_a_out0", "extern1";
-		assigned-clocks = <&bpmp_clks TEGRA194_CLK_PLLA_OUT0>,
-				  <&bpmp_clks TEGRA194_CLK_AUD_MCLK>;
-		assigned-clock-parents = <&bpmp_clks TEGRA194_CLK_PLLA>,
-					 <&bpmp_clks TEGRA194_CLK_PLLA_OUT0>;
+		assigned-clocks = <&bpmp_clks TEGRA194_CLK_AUD_MCLK>;
+		assigned-clock-parents = <&bpmp_clks TEGRA194_CLK_PLLA_OUT0>;
 
 		nvidia-audio-card,widgets =
 			"Headphone",	"CVB-RT Headphone Jack",
